--- a/assets/results.scss
+++ b/assets/results.scss
@@ -1,5 +1,47 @@
+$navy: #041C32;
+$accent: #ECB365;
+$dark-blue: #04293A;
+$blue: #064663;
+
 body {
   height: 100vh;
+  width: 100%;
+  background-color: $navy;
+}
+
+p {
+  font-size: 20px;
+  color: white;
+}
+
+.navbar {
+  background-color: $accent;
+  padding: 0 2rem;
+
+  p {
+    color: $blue;
+    font-weight: bold;
+    &:hover {
+      color: $navy;
+    }
+  }
+
+  .button {
+    background-color: $blue;
+    border: none;
+    &:hover {
+      background-color: $navy;
+    }
+  }
+}
+
+.title {
+  color: white;
+}
+
+
+.box {
+  background-color: $blue;
 }
 
 .streaming-imgs {
@@ -7,9 +49,9 @@ body {
     height: 80px;
     width: 80px;
     margin-right: 20px;
+    opacity: .1;
   }
-  .zee5 {
-    height: 60px;
-    margin-bottom: 10px;
+  .active {
+    opacity: 1;
   }
 }
