--- a/assets/results.css
+++ b/assets/results.css
@@ -34,6 +34,7 @@ p {
 
 .title {
   color: white;
+  margin-bottom: 0 !important;
 }
 
 .box {
@@ -52,13 +53,10 @@ p {
 }
 
 #list-button {
-  display: flex;
-  background-color: rgb(178, 178, 184);
-  border-radius: 15px;
-  height: 20px;
-}
-#watch-list {
-  overflow: auto;
-  height: 500px;
+  border-radius: 50%;
+  height: 25px;
+  margin-left: 10px;
+  border: none;
+  background-color: #ECB365;
 }
 /*# sourceMappingURL=results.css.map */
