editing styles, and adding links to the streaming icons

--- a/assets/results.css
+++ b/assets/results.css
@@ -1,12 +1,17 @@
 body {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   background-color: #041C32;
+  overflow-x: hidden;
 }
 
 p {
   font-size: 20px;
   color: white;
+}
+
+main {
+  margin-bottom: 0 !important;
 }
 
 .navbar {
@@ -58,5 +63,7 @@ p {
   margin-left: 10px;
   border: none;
   background-color: #ECB365;
+  padding: 7px 6px;
+  cursor: pointer;
 }
 /*# sourceMappingURL=results.css.map */
