--- a/assets/results.scss
+++ b/assets/results.scss
@@ -41,9 +41,13 @@ main {
 }
 
 #movie-container {
+  position: relative;
+  top: 10;
+
   div {
     align-items: center;
     margin-bottom: 20px;
+    
   }
 
   img {
@@ -65,6 +69,7 @@ main {
 
 .box {
   background-color: $blue;
+  margin-top: 10%;
 }
 
 .streaming-imgs {
