--- a/assets/results.css
+++ b/assets/results.css
@@ -37,6 +37,11 @@ main {
   background-color: #041C32;
 }
 
+#movie-container {
+  position: relative;
+  top: 10;
+}
+
 #movie-container div {
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -46,7 +51,6 @@ main {
 
 #movie-container img {
   width: 80px;
-  cursor: pointer;
 }
 
 #movie-container p {
@@ -61,6 +65,10 @@ main {
 
 .box {
   background-color: #064663;
+}
+
+.box .is-5 {
+  padding-bottom: 15px;
 }
 
 .streaming-imgs img {
