--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,95 @@
-h6 {
-    color: aqua;
+body {
+  min-height: 100vh;
+  width: 100%;
+  background-color: #041C32;
+  overflow-x: hidden;
 }
+
+p {
+  font-size: 20px;
+  color: white;
+}
+
+main {
+  margin-bottom: 0 !important;
+}
+
+main .box .field {
+  margin: 0 auto;
+  max-width: 500px;
+}
+
+main .box .field input {
+  color: #000;
+  font-size: 20px;
+}
+
+main .box .field button {
+  font-size: 20px;
+  background-color: #ECB365;
+  border: none;
+}
+
+.navbar {
+  background-color: #ECB365;
+  padding: 0 2rem;
+}
+
+.navbar h1 {
+  color: #064663;
+  font-weight: bold;
+  margin: 0 auto;
+  text-align: center;
+}
+
+#movie-container {
+  position: relative;
+  top: 10;
+}
+
+#movie-container div {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 20px;
+}
+
+#movie-container img {
+  width: 80px;
+}
+
+#movie-container p {
+  margin-left: 20px;
+  font-size: 20px;
+}
+
+.title {
+  color: white;
+  margin-bottom: 0 !important;
+}
+
+.box {
+  background-color: #064663;
+}
+
+.streaming-imgs img {
+  height: 80px;
+  width: 80px;
+  margin-right: 20px;
+  opacity: .1;
+}
+
+.streaming-imgs .active {
+  opacity: 1;
+}
+
+#list-button {
+  border-radius: 50%;
+  height: 25px;
+  margin-left: 10px;
+  border: none;
+  background-color: #ECB365;
+  padding: 7px 6px;
+  cursor: pointer;
+}
+/*# sourceMappingURL=styles.css.map */
