--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -1,61 +1,102 @@
-.body {
-    font-size: 30px
-}
+$navy: #041C32;
+$accent: #ECB365;
+$dark-blue: #04293A;
+$blue: #064663;
 
-.a {
-  background-color: #064663;
-}
-
-.header {
-  background-color: #ECB365;
-  width:;
-}
-
-h1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    size: 40px;
-    
-}
-
-.search-container{
-  width: 490px;
-  display: block;
-  margin: 0 auto;
-}
-
-input#search-bar{
-  margin: 0 auto;
+body {
+  min-height: 100vh;
   width: 100%;
-  height: 45px;
-  padding: 0 40px;
-  font-size: 1rem;
-  border: 1px solid #D0CFCE;
-  outline: none;
- }
+  background-color: $navy;
+  overflow-x: hidden;
+}
 
-.search-icon{
+p {
+  font-size: 20px;
+  color: white;
+}
+
+main {
+  margin-bottom: 0!important;
+
+  .box {
+    .field {
+      margin: 0 auto;
+      max-width: 500px;
+
+      input {
+        color: #000;
+        font-size: 20px;
+      }
+
+      button {
+        font-size: 20px;
+        background-color: $accent;
+        border: none;
+      }
+    }
+  }
+}
+
+.navbar {
+  background-color: $accent;
+  padding: 0 2rem;
+
+  h1 {
+    color: $blue;
+    font-weight: bold;
+    margin: 0 auto;
+    text-align: center;
+  }
+}
+
+#movie-container {
   position: relative;
-  float: right;
-  width: 75px;
-  height: 75px;
-  top: -62px;
-  right: -45px;
-}
+  top: 10;
 
-
-.buttongroup {
-    display: flex;
-    justify-content: center;
+  div {
     align-items: center;
-    height: 100px;
-    border: 3px ; 
+    margin-bottom: 20px;
+    
+  }
+
+  img {
+    width: 80px;
+  }
+
+  p {
+    margin-left: 20px;
+    font-size: 20px;
+  }
 }
 
-.button {
-    margin: 25px;  
-    padding: 5px;
-    width: 70px;
-    height: 30px
+.title {
+  color: white;
+  margin-bottom: 0 !important;
+}
+
+
+.box {
+  background-color: $blue;
+}
+
+.streaming-imgs {
+  img {
+    height: 80px;
+    width: 80px;
+    margin-right: 20px;
+    opacity: .1;
+  }
+  .active {
+    opacity: 1;
+  }
+}
+
+#list-button {
+  border-radius: 50%;
+  height: 25px;
+  margin-left: 10px;
+  border: none;
+  background-color: $accent;
+  padding: 7px 6px;
+  cursor: pointer;
 }
